--- a/package.json
+++ b/package.json
@@ -3,25 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "docker compose up -d && next dev",
+    "testdb": "POSTGRES_URL=postgres://postgres:postgres@localhost:5432/postgres tsx test.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.7.2",
+    "@vercel/postgres": "^0.7.2",
+    "@vercel/postgres-kysely": "^0.7.2",
+    "kysely": "^0.27.2",
+    "kysely-neon": "^1.3.0",
+    "next": "14.1.0",
+    "pg": "^8.11.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/pg": "^8.11.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "tsx": "^4.7.0",
+    "typescript": "^5"
   }
 }
